--- a/project 1/style.css
+++ b/project 1/style.css
@@ -99,3 +99,92 @@
     color: gray;
 
 }
+
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .bgimg{
+    background-image: url(./img/bgimg1.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+  }
+  .t6{
+    padding-top: 5%;
+    text-align: center;
+  }
+  .t7{
+    text-align: center;
+  }
+  .main{
+    display: flex;
+    justify-content:center;
+    gap: 30px;
+    padding-top: 5%;
+  
+  }
+  .pt1{
+    background-image: url(./img/pt1.jpg);
+    height: 400px;
+    width: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .pt2{
+    background-image: url(./img/pt2.jpg);
+    height: 400px;
+    width: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .pt3{
+    background-image: url(./img/pt3.jpg);
+    height: 400px;
+    width: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .pt4{
+    background-image: url(./img/pt4.jpg);
+    height: 400px;
+    width: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .BgColor{
+    height: 400px;
+    width: 300px;
+    background-color: rgba(64, 53, 53, 0.43);
+    padding-top: 80%;
+
+  }
+.maindiv2{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+ 
+}
