--- a/practical exam1/style.css
+++ b/practical exam1/style.css
@@ -5,54 +5,6 @@
 }
 
 
-
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.img-1{
-    height: 100px !important;
-    width: 100px !important;
-}
-
-
-
-
-
-
-
 html,
 body {
   position: relative;
@@ -81,7 +33,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: antiquewhite;
+  background-color:#C4D9FF;
 }
 
 .swiper-slide img {
